sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:4: error: not found: value getVaalueCount
  for (j<-0 to getVaalueCount()-1){
               ^