sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v=0
  for (j<-0 to getVaalueCount()-1){
    setValue(j,j)
  }
}

